--- a/site/index.html
+++ b/site/index.html
@@ -56,6 +56,9 @@
 <div class="col-lg-1">
 <input type="text" id="amount2" readonly style="border:0; color:#f6931f; font-weight:bold;">
 </div>
+<br>
+<div>Hello This is my front end domo!!!!!!!!
+<h4>play around with github and node js is interesting</h4></div>
  </div>
 
 
