--- a/site/index.html
+++ b/site/index.html
@@ -99,6 +99,9 @@
 <body>
     <div class="container-fluid">
         <br /><br />
+        <div>
+            <h4>Welcome to my github page. More content is coming soon.</h4>
+        </div>
         <div class="row">
             <div class="col-lg-4">
                 <form>
