--- a/site/index.html
+++ b/site/index.html
@@ -98,10 +98,11 @@
 </head>
 <body>
     <div class="container-fluid">
-        <br /><br />
-        <div>
+        <br />
+        <div class="text-center">
             <h4>Welcome to my github page. More content is coming soon.</h4>
         </div>
+        <br />
         <div class="row">
             <div class="col-lg-4">
                 <form>
