--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
     <script src="../bower_components/Scripts/jquery-3.1.1.min.js"></script>
     <script src="../bower_components/Scripts/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDAdexNb3XZXV4M3ZVKzyU05baZ6uT_UEk&libraries=visualization,places&language=en"></script>
     <style>
         li.first{
             border-radius:5px 0 0 5px;
@@ -93,6 +94,16 @@
             $('[data-toggle="tooltip"]').tooltip()
             
             ;
+
+            var mapCanvas = document.getElementById("googlemap");
+            var myCenter = new google.maps.LatLng(38.907, -77.1);
+            var mapOptions = { center: myCenter, zoom: 8 };
+            var map = new google.maps.Map(mapCanvas, mapOptions);
+            var marker = new google.maps.Marker({
+                position: myCenter//,
+                //animation: google.maps.Animation.BOUNCE
+            });
+            marker.setMap(map);
         })
     </script>
 </head>
@@ -328,7 +339,9 @@
 
 
             <div class="col-lg-4">
-
+                <div id="googlemap" style="width:100%;height:260px">
+                </div>
+                <br />
                 <ol class="breadcrumb">
                     <li><a>Home</a></li>
                     <li><a>Contact</a></li>
