--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>learn bootstrap 2</title>
+    <title>front end demo</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
