--- a/site/index.html
+++ b/site/index.html
@@ -381,7 +381,7 @@
                 <div class="panel panel-default" >
                     <div class="panel-heading"><h4>What is bootstrap</h4></div>
                     <div class="panel-body">Bootstrap is a free, open-source and is the most popular HTML,CSS, and Javascript framework</div>
-                    <div class="panel-footer">Kenific Group</div>
+                    <div class="panel-footer">The nKenific Group</div>
                 </div>
                 <br />
                 <div class="panel panel-primary">
@@ -460,22 +460,27 @@
                         </div>
                     </div>
 
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a href="#panelBodyFour" data-toggle="collapse" data-parent="accordion">
-                                    Jellyfish
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="panelBodyFour" class="panel-collapse collapse">
-                            <div class="panel-body">
-                               <img class="img-responsive" src="C:\Users\James.Laptop\Desktop\house_pic\first.jpg" alt="Jellyfish" />
-                            </div>
+                </div>
+
+                <br />
+
+            </div>
+
+            <div class="col-lg-4">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a href="#panelBodyFour" data-toggle="collapse" data-parent="accordion">
+                                Jellyfish
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="panelBodyFour" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <img class="img-responsive" src="C:\Users\James.Laptop\Desktop\house_pic\first.jpg" alt="Jellyfish" />
                         </div>
                     </div>
                 </div>
-
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h4 class="panel-title">
@@ -515,14 +520,6 @@
                         </div>
                     </div>
                 </div>
-
-                
-
-                <br />
-
-            </div>
-
-            <div class="col-lg-4">
                 <div class="well well-default">
                     <button id="expandall" class="btn btn-primary" >Expand All</button>
                     <button id="collapseall" class="btn btn-primary">Collapse All</button>
