--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
     <link href="styles/bootstrap-social.css" rel="stylesheet">
     <link href="styles/mystyles.css" rel="stylesheet">
     
-    <script src="https://maps.googleapis.com/maps/api/js?&language=en"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAdexNb3XZXV4M3ZVKzyU05baZ6uT_UEk&libraries=visualization,places&language=en"></script>
     <script src="../bower_components/Scripts/jquery-3.1.1.min.js"></script>
     <script src="../bower_components/Scripts/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
