--- a/site/index.html
+++ b/site/index.html
@@ -111,7 +111,7 @@
     <div class="container-fluid">
         <br />
         <div class="text-center">
-            <h4>Welcome to my github page. More content is coming soon.</h4>
+            <h4>Welcome to my github page. Play around a bit with the Buttons, more content is coming soon!</h4>
         </div>
         <br />
         <div class="row">
