--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
     <div class="container-fluid">
         <br />
         <div class="text-center">
-            <h4>Welcome to my github page</h4>
+            <h4>Welcome to this github page--It is nice</h4>
               <h4>Play around a bit with the Buttons, more content is coming soon!</h4>
         </div>
         <br />
