--- a/site/index.html
+++ b/site/index.html
@@ -13,57 +13,58 @@
 <body>
   <header>
     <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img" alt="Logo image"></div>
-          </a>
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Beijing Duck China Bistro</h1></a>
-            <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
-            </p>
-          </div>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <div class="container">
+            <div class="navbar-header">
+                <a href="index.html" class="pull-left visible-md visible-lg">
+                    <div id="logo-img" alt="Logo image"></div>
+                </a>
+                <div class="navbar-brand">
+                    <a href="index.html"><h1>Beijing Duck China Bistro</h1></a>
+                    <p>
+                        <img src="images/star-k-logo.png" alt="Kosher certification">
+                        <span>Kosher Certified</span>
+                    </p>
+                </div>
+                <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+                <ul id="nav-list" class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="menu-categories.html">
+                            <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs" />Menu
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs" />About
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs" />Awards
+                        </a>
+                    </li>
+                    <li id="phone" class="hidden-xs">
+                        <a href="tel:410-602-5008"><span>410-602-5008</span><div>* We Deliver</div></a>
+                    </li>
+                </ul>
+            </div>
+
+
         </div>
-          <div id="collapsable-nav" class="collapse navbar-collapse">
-              <ul id="nav-list" class="nav navbar-nav navbar-right">
-                  <li>
-                      <a href="menu-categories.html">
-                          <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs" />Menu
-                      </a>
-                  </li>
-                  <li>
-                      <a href="#">
-                          <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs" />About
-                      </a>
-                  </li>
-                  <li>
-                      <a href="#">
-                          <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs" />Awards
-                      </a>
-                  </li>
-                  <li id="phone" class="hidden-xs">
-                      <a href="tel:410-602-5008"><span>410-602-5008</span><div>* We Deliver</div></a>
-                  </li>
-              </ul>
-          </div>
-
-
-      </div>
     </nav>
   </header>
   
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
