--- a/site/index.html
+++ b/site/index.html
@@ -60,6 +60,22 @@
         </div>
     </nav>
   </header>
+  <div id="call-btn" class="visible-xs">
+      <a class="btn" href="tel:410-602-5008">
+          <span class="glyphion glyphico-earphone"></span>
+         410-602-5008
+      </a>
+  </div>
+  <div id="xs-deliver" class="text-center visible-xs">
+      * We Deliver
+  </div>
+  <div class="container">
+      <div class="jumbotron">
+          <img src="images/jumbotron_768.jpg" alt="Picture of restaurant"
+          class="img-responsive visible-xs">
+      </div>    
+
+  </div>
   
 
 
