change to beijing duck

--- a/site/index.html
+++ b/site/index.html
@@ -116,7 +116,7 @@
           I will be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's 
+      <div class="text-center">&copy; Copyright Beijing Duck 
       China Bistro 2016
       </div>
     </div>  
