--- a/site/index.html
+++ b/site/index.html
@@ -97,7 +97,7 @@
         <section id="hours" class="col-sm-4">
           <span>Hours:</span><br>
           Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15 - 2:30pm<br>
+          Fri: 11:15am - 2:30pm<br>
           Saturday Closed
           <hr class="visible-xs">
         </section>
