--- a/site/single-category.html
+++ b/site/single-category.html
@@ -84,7 +84,8 @@
                     </div>
                     <div class="menu-item-description col-sm-7">
                         <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
-                        <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
+                        <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.
+                        rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
                     </div>
                 </div>
 
@@ -109,6 +110,81 @@
                 <hr class="visible-xs">
 
             </div>
+             <div class="clearfix visible-md-block visible-lg-block"></div>
+             <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D03</div>
+                            <img class="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="Item">
+                        </div>
+                        <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+                        <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
+                    </div>
+                </div>
+
+                <hr class="visible-xs">
+
+            </div>
+             <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D04</div>
+                            <img class="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="Item">
+                        </div>
+                        <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+                        <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
+                    </div>
+                </div>
+
+                <hr class="visible-xs">
+
+            </div>
+            <dir class="clearfix visible-md-block visible-lg-md"></dir>
+             <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D05</div>
+                            <img class="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="Item">
+                        </div>
+                        <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+                        <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
+                    </div>
+                </div>
+
+                <hr class="visible-xs">
+
+            </div>
+             <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>D06</div>
+                            <img class="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="Item">
+                        </div>
+                        <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+                        <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
+                    </div>
+                </div>
+
+                <hr class="visible-xs">
+
+            </div>
+            <div class="clear-fix visible-md-block visible-lg-block"></div>
 
         </section>
     </div>
