--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,11 @@
 
             <div id="collapsable-nav" class="collapse navbar-collapse">
                 <ul id="nav-list" class="nav navbar-nav navbar-right">
+                    <li class="active">
+                        <a href="index.html">
+                            <span class="glyphicon glyphicon-home"></span><br class="hidden-xs" />Home
+                        </a>
+                    </li>
                     <li>
                         <a href="menu-categories.html">
                             <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs" />Menu
