--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
 
             <div id="collapsable-nav" class="collapse navbar-collapse">
                 <ul id="nav-list" class="nav navbar-nav navbar-right">
-                    <li class="active">
+                    <li class="visible-xs active">
                         <a href="index.html">
                             <span class="glyphicon glyphicon-home"></span><br class="hidden-xs" />Home
                         </a>
