--- a/site/index.html
+++ b/site/index.html
@@ -73,7 +73,7 @@
       </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">
-      * We Deliver
+      * We Deliver *
   </div>
   <div id="main-content" class="container">
       <div class="jumbotron">
